force-app/main/default/objects/IB_Deal_Team_Member__c/IB_Deal_Team_Member__c.object-meta.xml
<CustomObject>
    <label>IB 딜팀 멤버</label>
    <nameField>
        <displayFormat>TM-{0000}</displayFormat>
        <label>멤버 번호</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IB 딜팀 멤버</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>