force-app/main/default/objects/IB_Deal_Team_Member__c/fields/Access_Ended_At__c.field-meta.xml
<CustomField>
    <fullName>Access_Ended_At__c</fullName>
    <label>접근 종료 일시</label>
    <type>DateTime</type>
</CustomField>