force-app/main/default/objects/IB_Deal_Team_Member__c/fields/IB_Deal__c.field-meta.xml
<CustomField>
    <fullName>IB_Deal__c</fullName>
    <label>기업 IB 딜</label>
    <referenceTo>IB_Deal__c</referenceTo>
    <relationshipLabel>IB 딜팀 멤버</relationshipLabel>
    <relationshipName>Deal_Team_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>