force-app/main/default/objects/IB_Deal_Team_Member__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>사용자</label>
    <referenceTo>User</referenceTo>
    <relationshipName>IB_Deal_Memberships</relationshipName>
    <type>Lookup</type>
</CustomField>