force-app/main/default/objects/IB_Deal_Team_Member__c/fields/Wall_Crossed_At__c.field-meta.xml
<CustomField>
    <fullName>Wall_Crossed_At__c</fullName>
    <label>월크로스 일시</label>
    <type>DateTime</type>
</CustomField>